--- a/config/flag.yaml
+++ b/config/flag.yaml
@@ -7,7 +7,7 @@ params:
     task: mesh
     dataset: flag_minimal
     rollout_split: valid
-    batch_size: 2
+    batch_size: 1
     epochs: 15
     n_timesteps: 160
     trajectories: 10
@@ -20,10 +20,10 @@ params:
       n_steps: 10
     validation:
       trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during training
-      rollouts: 10 # Number of trajectories that are going to be used to compute the rollout loss during training
+      rollouts: 1 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 10
-      n_viz: 5
+      n_step_rollouts: 1
+      n_viz: 1
   model:
     field: world_pos
     history: True
@@ -33,14 +33,14 @@ params:
     scheduler_epoch: 10
     aggregation: pna
     learning_rate: 1.0e-4
-    message_passing_steps: 5
+    message_passing_steps: 1
     rmp:
       num_clusters: 30
       hyper_noise: 0.003
       hyper_node_features: False
       frequency: 1
-      clustering: spectral
-      connector: hetero
+      clustering: None
+      connector: None
       fully_connect: False
       intra_cluster_sampling:
         enabled: False
