--- a/config/flag.yaml
+++ b/config/flag.yaml
@@ -8,22 +8,22 @@ params:
     dataset: flag_minimal
     rollout_split: valid
     batch_size: 2
-    epochs: 15
-    n_timesteps: 160
+    epochs: 5
+    n_timesteps: 16
     trajectories: 10
     mode: all
     prefetch_factor: 1
     test:
-      trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during evaluation
-      rollouts: 10 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
-      n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
+      trajectories: 2 # Number of trajectories that are going to be used to compute the validation loss during evaluation
+      rollouts: 2 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
+      n_step_rollouts: 2 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during training
-      rollouts: 1 # Number of trajectories that are going to be used to compute the rollout loss during training
+      trajectories: 2 # Number of trajectories that are going to be used to compute the validation loss during training
+      rollouts: 2 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 1
-      n_viz: 1
+      n_step_rollouts: 2
+      n_viz: 2
   model:
     field: world_pos
     history: True
@@ -34,32 +34,8 @@ params:
     aggregation: pna
     learning_rate: 1.0e-4
     message_passing_steps: 1
-    rmp:
-      num_clusters: 30
-      hyper_noise: 0.003
-      hyper_node_features: False
-      frequency: 1
-      clustering: None
-      connector: None
-      fully_connect: False
-      intra_cluster_sampling:
-        enabled: False
-        alpha: 0.1
-        spotter_threshold: 0
-      hdbscan:
-        max_cluster_size: 50
-        min_cluster_size: 20
-        min_samples: 1
-        spotter_threshold: 0.9
-    graph_balancer:
-      algorithm: none
-      frequency: 1
-      remove_edges: True
-      ricci:
-        loops: 150
-        tau: 150
-      random:
-        edge_amount: 100
+    use_global: False
+    heterogeneous: False
   logging:
     wandb_mode: online
   random_seed: 0
