Implement parameterization via config files.

--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -35,7 +35,7 @@ params:
     aggregation: pna
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: False
+    use_global: True
     heterogeneous: False
   logging:
     wandb_mode: online
