--- a/config/poisson.yaml
+++ b/config/poisson.yaml
@@ -30,12 +30,12 @@ params:
     pc_noise: 0.0
     pc_frequency: 1
     mgn: True
-    poisson_ratio: False
+    poisson_ratio: True
     scheduler_epoch: 10
     aggregation: pna
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: False
+    use_global: True
     heterogeneous: False
   logging:
     wandb_mode: online
