--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -35,7 +35,7 @@ params:
     aggregation: pna
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: True
+    use_global: False
     heterogeneous: False
   logging:
     wandb_mode: online
