Code cleaning and parameterization.

--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -19,6 +19,7 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
+      interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 100 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
