--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -19,6 +19,7 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
+      interval: 1
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 100 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
@@ -38,5 +39,5 @@ params:
     use_global: False
     heterogeneous: False
   logging:
-    wandb_mode: online
+    wandb_mode: offline
   random_seed: 0
