--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -4,13 +4,13 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
+    task: lstm
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 32
+    batch_size: 1
     epochs: 150
     n_timesteps: 50
-    trajectories: 2
+    trajectories: None
     mode: all
     prefetch_factor: 1
     test:
@@ -20,23 +20,23 @@ params:
       n_steps: 10
     validation:
       interval: 1
-      trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
-      rollouts: 100 # Number of trajectories that are going to be used to compute the rollout loss during training
+      trajectories: 100 # Number of trajectories that are going to be used to compute the validation loss during training
+      rollouts: 50 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 50
+      n_step_rollouts: 10
       n_viz: 5
   model:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 1
-    mgn: True
+    pc_frequency: 5
+    mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
-    learning_rate: 5.0e-4
+    learning_rate: 1.0e-4
     message_passing_steps: 5
-    use_global: False
+    use_global: True
     heterogeneous: False
   logging:
     wandb_mode: online
