--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -5,6 +5,7 @@ params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
     task: lstm
+    sequence: 50
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 30
