--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -4,13 +4,14 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
+    task: lstm
+    sequence: 50
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 1
+    batch_size: 30
     epochs: 150
     n_timesteps: 50
-    trajectories: None
+    trajectories: 675
     mode: all
     prefetch_factor: 1
     test:
@@ -34,9 +35,9 @@ params:
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
-    learning_rate: 1.0e-4
+    learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: True
+    use_global: False
     heterogeneous: False
   logging:
     wandb_mode: online
