--- a/config/poisson.yaml
+++ b/config/poisson.yaml
@@ -4,13 +4,14 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
+    task: lstm
+    sequence: 50
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 32
+    batch_size: 30
     epochs: 150
     n_timesteps: 50
-    trajectories: None
+    trajectories: 675
     mode: all
     prefetch_factor: 1
     test:
@@ -29,14 +30,14 @@ params:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 1
-    mgn: True
-    poisson_ratio: True
+    pc_frequency: 5
+    mgn: False
+    poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: True
+    use_global: False
     heterogeneous: False
   logging:
     wandb_mode: online
