--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -4,7 +4,7 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
+    task: mesh
     sequence: 50
     dataset: deformable_plate
     rollout_split: valid
@@ -30,7 +30,7 @@ params:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 5
+    pc_frequency: 2
     mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
