Set up K=5 and K=50 experiments.

--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -1,11 +1,8 @@
-name: "DEFAULT"   # MUST BE DEFAULT
-import_path: "default.yaml"
-
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
-    sequence: 50
+    task: lstm
+    sequence: 5
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 30
@@ -35,7 +32,7 @@ params:
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
-    learning_rate: 1.0e-4
+    learning_rate: 5.0e-4
     message_passing_steps: 5
     use_global: False
     heterogeneous: False
