--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -1,3 +1,6 @@
+name: "DEFAULT"   # MUST BE DEFAULT
+import_path: "default.yaml"
+
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
