--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -9,7 +9,7 @@ params:
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 25
-    epochs: 150
+    epochs: 250
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -22,7 +22,7 @@ params:
     validation:
       interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
-      rollouts: 100 # Number of trajectories that are going to be used to compute the rollout loss during training
+      rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
       n_step_rollouts: 50
       n_viz: 5
@@ -32,12 +32,12 @@ params:
     pc_noise: 0.0
     pc_frequency: 2
     mgn: False
-    poisson_ratio: True
+    poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: True
+    use_global: False
     heterogeneous: False
   logging:
     wandb_mode: online
