--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -4,11 +4,12 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
-    sequence: 25
+    task: mesh
+    model: trapez
+    sequence: 5
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 25
+    batch_size: 30
     epochs: 300
     n_timesteps: 50
     trajectories: 675
@@ -20,7 +21,7 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      interval: 15
+      interval: 2
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
@@ -35,7 +36,7 @@ params:
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
-    learning_rate: 5.0e-4
+    learning_rate: 1.0e-4
     message_passing_steps: 5
     use_global: False
     heterogeneous: False
