--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -10,7 +10,7 @@ params:
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 30
-    epochs: 300
+    epochs: 200
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -21,7 +21,7 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      interval: 2
+      interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
@@ -31,8 +31,8 @@ params:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 2
-    mgn: False
+    pc_frequency: 1
+    mgn: True
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
