--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -4,13 +4,13 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
-    model: poisson
+    task: mesh
+    model: trapez
     sequence: 5
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 25
-    epochs: 300
+    batch_size: 30
+    epochs: 200
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -21,7 +21,7 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      interval: 15
+      interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
@@ -31,12 +31,12 @@ params:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 2
+    pc_frequency: 5
     mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: pna
-    learning_rate: 5.0e-4
+    learning_rate: 1.0e-4
     message_passing_steps: 5
     use_global: False
     heterogeneous: False
