--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -9,8 +9,8 @@ params:
     sequence: 5
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 30
-    epochs: 200
+    batch_size: 32
+    epochs: 1000
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -23,20 +23,20 @@ params:
     validation:
       interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
-      rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
+      rollouts: 50 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 50
+      n_step_rollouts: 1
       n_viz: 5
   model:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 1
-    mgn: True
+    pc_frequency: 5
+    mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
-    aggregation: pna
-    learning_rate: 1.0e-4
+    aggregation: mean
+    learning_rate: 5.0e-4
     message_passing_steps: 5
     use_global: False
     heterogeneous: False
