--- a/config/test.yaml
+++ b/config/test.yaml
@@ -4,13 +4,13 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: alternating
-    model: trapez
-    sequence: 5
+    task: lstm
+    model: poisson
+    sequence: 10
     dataset: deformable_plate
     rollout_split: valid
-    batch_size: 30
-    epochs: 200
+    batch_size: 32
+    epochs: 1000
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -21,11 +21,11 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      interval: 10
+      interval: 1
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 50
+      n_step_rollouts: 10
       n_viz: 5
   model:
     size: 2
@@ -35,7 +35,7 @@ params:
     mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
-    aggregation: pna
+    aggregation: mean
     learning_rate: 1.0e-4
     message_passing_steps: 5
     use_global: True
