--- a/config/test.yaml
+++ b/config/test.yaml
@@ -4,7 +4,7 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
+    task: mesh
     model: poisson
     sequence: 10
     dataset: deformable_plate
