--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -4,9 +4,9 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
-    model: trapez
-    sequence: 5
+    task: lstm
+    model: poisson
+    sequence: 25
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
@@ -25,20 +25,20 @@ params:
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 50
-      n_viz: 5
+      n_step_rollouts: 10
+      n_viz: 1
   model:
     size: 2
     noise: 0.01
     pc_noise: 0.0
-    pc_frequency: 5
+    pc_frequency: 1
     mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: mean
-    learning_rate: 5.0e-4
+    learning_rate: 1.0e-4
     message_passing_steps: 5
-    use_global: False
+    use_global: True
     heterogeneous: False
   logging:
     wandb_mode: online
