--- a/config/test.yaml
+++ b/config/test.yaml
@@ -6,7 +6,7 @@ params:
   task:
     task: mesh
     model: poisson
-    sequence: 10
+    sequence: 5
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
@@ -21,13 +21,16 @@ params:
       n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
       n_steps: 10
     validation:
-      interval: 1
+      interval: 10
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
       n_step_rollouts: 10
-      n_viz: 5
+      n_viz: 1
   model:
+    feature_norm: False
+    layer_norm: False
+    layers: 2
     size: 2
     noise: 0.01
     pc_noise: 0.0
