--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -4,9 +4,9 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
+    task: mesh
     model: poisson
-    sequence: 25
+    sequence: 5
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
@@ -28,6 +28,9 @@ params:
       n_step_rollouts: 10
       n_viz: 1
   model:
+    feature_norm: False
+    layer_norm: True
+    layers: 1
     size: 2
     noise: 0.01
     pc_noise: 0.0
