--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -4,7 +4,7 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: lstm
+    task: mesh
     model: poisson
     sequence: 5
     dataset: deformable_plate
@@ -28,9 +28,9 @@ params:
       n_step_rollouts: 10
       n_viz: 1
   model:
-    feature_norm: True
+    feature_norm: False
     layer_norm: False
-    layers: 2
+    layers: 1
     size: 2
     noise: 0.01
     pc_noise: 0.0
