--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -29,7 +29,7 @@ params:
       n_viz: 1
   model:
     feature_norm: True
-    layer_norm: True
+    layer_norm: False
     layers: 2
     size: 2
     noise: 0.01
@@ -38,7 +38,7 @@ params:
     mgn: False
     poisson_ratio: False
     scheduler_epoch: 10
-    aggregation: pna
+    aggregation: mean
     learning_rate: 1.0e-4
     message_passing_steps: 5
     use_global: True
