--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -4,9 +4,9 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
+    task: lstm
     model: poisson
-    sequence: 5
+    sequence: 10
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
@@ -28,9 +28,9 @@ params:
       n_step_rollouts: 10
       n_viz: 1
   model:
-    feature_norm: True
+    feature_norm: False
     layer_norm: False
-    layers: 2
+    layers: 1
     size: 2
     noise: 0.01
     pc_noise: 0.0
