--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -4,9 +4,9 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: mesh
+    task: lstm
     model: poisson
-    sequence: 5
+    sequence: 25
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
@@ -28,7 +28,7 @@ params:
       n_step_rollouts: 10
       n_viz: 1
   model:
-    feature_norm: True
+    feature_norm: False
     layer_norm: False
     layers: 1
     size: 2
@@ -39,7 +39,7 @@ params:
     poisson_ratio: False
     scheduler_epoch: 10
     aggregation: mean
-    learning_rate: 1.0e-5
+    learning_rate: 1.0e-4
     message_passing_steps: 5
     use_global: True
     heterogeneous: False
