--- a/config/poisson.yaml
+++ b/config/poisson.yaml
@@ -5,12 +5,12 @@ params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
     task: mesh
-    model: poisson
+    model: trapez
     sequence: 1
     dataset: deformable_plate
     rollout_split: valid
     batch_size: 32
-    epochs: 1000
+    epochs: 200
     n_timesteps: 50
     trajectories: 675
     mode: all
@@ -25,7 +25,7 @@ params:
       trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
       rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
       n_steps: 10
-      n_step_rollouts: 10
+      n_step_rollouts: 20
       n_viz: 1
   model:
     feature_norm: False
@@ -35,11 +35,11 @@ params:
     noise: 0.01
     pc_noise: 0.0
     pc_frequency: 1
-    mgn: False
-    poisson_ratio: False
+    mgn: True
+    poisson_ratio: True
     scheduler_epoch: 10
     aggregation: mean
-    learning_rate: 1.0e-4
+    learning_rate: 5.0e-4
     message_passing_steps: 5
     use_global: True
     heterogeneous: False
