--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -4,7 +4,7 @@ import_path: "default.yaml"
 params:
   retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
   task:
-    task: alternating
+    task: mesh
     model: trapez
     sequence: 1
     dataset: deformable_plate
@@ -41,7 +41,7 @@ params:
     aggregation: mean
     learning_rate: 5.0e-4
     message_passing_steps: 5
-    use_global: True
+    use_global: False
     heterogeneous: False
   logging:
     wandb_mode: online
