Implement recurrent poisson ratio estimation.

--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -10,8 +10,8 @@ task:
   task: trapez # trapez/poisson
   model: supervised # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # None/name now T/F
-  sequence: 1
+  recurrence: True # None/name now T/F
+  sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
   batch_size: 32
