--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -10,7 +10,7 @@ task:
   task: trapez # trapez/poisson
   model: supervised # mgn/supervised/self-supervised
   ggns: True # T/F
-  recurrence: True # None/name now T/F
+  recurrence: False # None/name now T/F
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
