--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -8,12 +8,12 @@ directory: deformable_plate
 
 task:
   task: trapez # trapez/poisson
-  model: supervised # mgn/supervised/self-supervised
+  model: self-supervised # mgn/supervised/self-supervised
   ggns: False # T/F
   recurrence: False # None/name now T/F
   sequence: 1
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
+  learning_rate: 1.0e-4
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
