--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -19,6 +19,7 @@ task:
   n_timesteps: 50
   epochs: 200
   pretraining: 200
+  reduced: True
 
   test:
     trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during evaluation
