--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -10,8 +10,8 @@ task:
   task: trapez # trapez/poisson
   model: self-supervised # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # False/name
-  sequence: 1
+  recurrence: GRU # False/name
+  sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 1.0e-4
   batch_size: 32
