--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -7,15 +7,15 @@ wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: trapez # trapez/poisson
+  task: poisson # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
-  ggns: True # T/F
-  recurrence: False # False/name
+  ggns: False # T/F
+  recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
+  learning_rate: 1.0e-4
   batch_size: 32
-  trajectories: 675
+  trajectories: 32
   n_timesteps: 50
   epochs: 200
   pretraining: 200
@@ -30,7 +30,7 @@ task:
     n_viz: 5
 
   validation:
-    interval: 10
+    interval: 1
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
