--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -10,8 +10,8 @@ task:
   task: poisson # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # False/name
-  sequence: 1
+  recurrence: gru # False/name
+  sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 1.0e-4
   batch_size: 32
@@ -19,21 +19,24 @@ task:
   n_timesteps: 50
   epochs: 200
   pretraining: 200
-  reduced: True
+  reduced: False
+  imputation: [1, 2, 5]
 
   test:
-    trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during evaluation
-    rollouts: 10 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
-    n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
+    trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
+    rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
+    n_step_rollouts: 135 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
     n_steps: 10
+    n_viz: 5
 
   validation:
     interval: 10
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
-    n_step_rollouts: 1
-    n_viz: 5
+    n_step_rollouts: 135
+    viz_interval: 500
+    n_viz: 0
 
 model:
   feature_norm: False
