--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -10,7 +10,7 @@ task:
   task: trapez # trapez/poisson
   model: supervised # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # False/name
+  recurrence: gru # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
@@ -19,7 +19,7 @@ task:
   trajectories: 675
   n_timesteps: 50
   epochs: 200
-  pretraining: 200
+  pretraining: 100
   reduced: False
   imputation: [1, 2, 5]
 
@@ -50,6 +50,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
+  learning_rate: 1.0e-4
   weight_decay: 1.0e-5
-  epochs: 1
+  epochs: 100
