--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -18,10 +18,10 @@ task:
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 200
+  epochs: 100
   pretraining: 100
   reduced: False
-  imputation: [2, 5]
+  imputation: [5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -52,4 +52,4 @@ model:
 poisson:
   learning_rate: 5.0e-4
   weight_decay: 1.0e-5
-  epochs: 150
+  epochs: 100
