--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -50,6 +50,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 1.0e-4
-  weight_decay: 0
+  learning_rate: 5.0e-4
+  weight_decay: 1.0e-5
   epochs: 100
