--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -10,7 +10,7 @@ task:
   task: trapez # trapez/poisson
   model: supervised # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: gru # False/name
+  recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
@@ -50,6 +50,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-5
+  learning_rate: 1.0e-3
+  weight_decay: 1.0e-4
   epochs: 70
