--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -8,20 +8,20 @@ directory: deformable_plate
 
 task:
   task: trapez # trapez/poisson
-  model: supervised # mgn/supervised/self-supervised
+  model: self-supervised # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # False/name
-  sequence: 1
+  recurrence: gru # False/name
+  sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 0
+  learning_rate: 1.0e-4
+  weight_decay: 1.0e-5
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
   epochs: 100
   pretraining: 100
   reduced: False
-  imputation: [5]
+  imputation: [1, 2, 5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
