Add subsampling and random seed to task names.

--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -21,6 +21,7 @@ task:
   epochs: 100
   pretraining: 100
   reduced: False
+  subsampling: voxel # if voxel, reduced must be False. Non-recurrent only!
   imputation: [5]
 
   test:
