--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -8,20 +8,20 @@ directory: deformable_plate
 
 task:
   task: trapez # trapez/poisson
-  model: supervised # mgn/supervised/self-supervised
+  model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
   recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
-  weight_decay: 0
+  weight_decay: 2.0e-4
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
   epochs: 100
   pretraining: 100
   reduced: False
-  subsampling: voxel # if voxel, reduced must be False. Non-recurrent only!
+  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
   imputation: [5]
 
   test:
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 1.0e-3
+  learning_rate: 5.0e-4
   weight_decay: 2.0e-4
   epochs: 150
