--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -7,32 +7,37 @@ wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: poisson # trapez/poisson
+  task: trapez # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
-  ggns: False # T/F
+  ggns: True # T/F
   recurrence: False # False/name
   sequence: 1
   poisson_ratio: False # Link to use global with model
-  learning_rate: 1.0e-4
+  learning_rate: 5.0e-4
+  weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 200
-  pretraining: 200
-  reduced: True
+  epochs: 150
+  pretraining: 100
+  reduced: False
+  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
+  imputation: [1, 2, 5]
 
   test:
-    trajectories: 10 # Number of trajectories that are going to be used to compute the validation loss during evaluation
-    rollouts: 10 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
-    n_step_rollouts: 1 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
+    trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
+    rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during evaluation
+    n_step_rollouts: 135 # Number of trajectories that are going to be used to compute the n_step_loss during evaluation
     n_steps: 10
+    n_viz: 5
 
   validation:
     interval: 10
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
-    n_step_rollouts: 1
+    n_step_rollouts: 135
+    viz_interval: 50
     n_viz: 5
 
 model:
@@ -44,3 +49,8 @@ model:
   aggregation: mean
   message_passing_steps: 5
   heterogeneous: False
+
+poisson:
+  learning_rate: 5.0e-4
+  weight_decay: 1.0e-4
+  epochs: 2
