--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -13,16 +13,16 @@ task:
   recurrence: gru # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 100
+  epochs: 200
   pretraining: 100
   reduced: False
   subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
-  imputation: [5]
+  imputation: [1, 2, 5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
-  epochs: 70
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
+  epochs: 200
