--- a/config/test.yaml
+++ b/config/test.yaml
@@ -1,7 +1,7 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 115
+random_seed: 9
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
@@ -14,15 +14,15 @@ task:
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 3.0e-4
-  weight_decay: 1.0e-4
+  weight_decay: 1.0e-5
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 150
+  epochs: 200
   pretraining: 100
   reduced: False
   subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
-  imputation: [5]
+  imputation: [1, 2, 5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -52,5 +52,5 @@ model:
 
 poisson:
   learning_rate: 3.0e-4
-  weight_decay: 1.0e-4
-  epochs: 150
+  weight_decay: 1.0e-5
+  epochs: 200
