--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -1,28 +1,28 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 115
+random_seed: 0
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: trapez # trapez/poisson
-  model: supervised # mgn/supervised/self-supervised
+  task: poisson # trapez/poisson
+  model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
   recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 100
+  epochs: 200
   pretraining: 100
-  reduced: True
+  reduced: False
   subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
-  imputation: [5]
+  imputation: [1, 2, 5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
-  epochs: 150
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
+  epochs: 200
