--- a/config/gru.yaml
+++ b/config/gru.yaml
@@ -10,7 +10,7 @@ task:
   task: poisson # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: gru # False/name
+  recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 3.0e-4
