--- a/config/test.yaml
+++ b/config/test.yaml
@@ -1,7 +1,7 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 31
+random_seed: 0
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
@@ -21,7 +21,7 @@ task:
   epochs: 200
   pretraining: 100
   reduced: False
-  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
+  subsampling: voxel # if voxel, reduced must be False. Non-recurrent only!
   imputation: [1, 2, 5]
 
   test:
