--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -1,7 +1,7 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 115
+random_seed: 9
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
@@ -10,18 +10,18 @@ task:
   task: poisson # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: gru # False/name
-  sequence: 5
+  recurrence: False # False/name
+  sequence: 1
   poisson_ratio: False # Link to use global with model
-  learning_rate: 3.0e-4
-  weight_decay: 1.0e-5
+  learning_rate: 1.0e-4
+  weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
   epochs: 200
   pretraining: 100
   reduced: False
-  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
+  subsampling: mesh # if voxel, reduced must be False. Non-recurrent only!
   imputation: [1, 2, 5]
 
   test:
@@ -44,13 +44,13 @@ model:
   feature_norm: False
   layer_norm: False
   layers: 1
-  noise: 0.01
-  pc_noise: 0.01
+  noise: 0.0
+  pc_noise: 0.0
   aggregation: mean
   message_passing_steps: 5
   heterogeneous: False
 
 poisson:
-  learning_rate: 3.0e-4
-  weight_decay: 1.0e-5
+  learning_rate: 1.0e-4
+  weight_decay: 0
   epochs: 200
