--- a/config/base.yaml
+++ b/config/base.yaml
@@ -7,13 +7,13 @@ wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: poisson # trapez/poisson
+  task: trapez # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
   recurrence: False # False/name
   sequence: 1
   poisson_ratio: False # Link to use global with model
-  learning_rate: 1.0e-4
+  learning_rate: 5.0e-4
   weight_decay: 0
   batch_size: 32
   trajectories: 675
@@ -21,7 +21,7 @@ task:
   epochs: 200
   pretraining: 100
   reduced: False
-  subsampling: mesh # if voxel, reduced must be False. Non-recurrent only!
+  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
   imputation: [1, 2, 5]
 
   test:
@@ -37,8 +37,8 @@ task:
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
     n_step_rollouts: 135
-    viz_interval: 500
-    n_viz: 0
+    viz_interval: 200
+    n_viz: 5
 
 model:
   feature_norm: False
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 1.0e-4
+  learning_rate: 5.0e-4
   weight_decay: 0
   epochs: 200
